# class-8

./: .clang-format  CMakeLists.txt
class5/: .gitignore  CMakeLists.txt
class5/cxx/: CMakeLists.txt
class7/: CMakeLists.txt  factorial.cxx  greeting.cxx  hello.cxx  hello.h
class7/bowling/: CMakeLists.txt
class8/: CMakeLists.txt
